--- a/vonline_be/war/ajax/forum/talks-single.html
+++ b/vonline_be/war/ajax/forum/talks-single.html
@@ -13,8 +13,6 @@
                                     <a href="#">
                                         <img src="i/avatars/clint.jpg" alt="картинка" /></a>
                                     <div class="topic-author">
-                                        <!--<a class="fa fa-plus plus-minus"
-                                           ng-click="talks.toggleInsideTreeOfMessages()" href="#"></a>-->
                                     </div>
                                 </div>
                                 <div class="topic-right">
@@ -24,7 +22,7 @@
                                     <p>{{talks.fullTalkTopic.message.content}}</p>
                                         <div class="message-bottom">
                                             <span class="topic-header-date">{{talks.fullTalkTopic.message.created|date}}</span>
-                                            <a class="answer-link" href="#" ng-click="talks.showAnswerInput($event)">Ответить</a>
+                                            <a class="answer-link" href="#" ng-click="talks.showTopicAnswerInput($event)">Ответить</a>
                                         </div>
                                 </div>
                             </div>
@@ -36,7 +34,7 @@
                     </div>
                     <ol class="dd-list">
 
-                        <li class="dd-item dd2-item topic-item" ng-repeat="firstMessage in talks.fullTalkFirstMessages">
+                        <li class="dd-item dd2-item topic-item" ng-repeat="firstMessage in talks.fullTalkFirstMessages" id="{{firstMessage.id}}">
                             <div class="dd2-content widget-box topic-descr">
                                 <div class="widget-body">
                                     <div class="widget-main">
@@ -45,7 +43,7 @@
                                                 <img src="i/avatars/clint.jpg" alt="картинка" /></a>
                                             <div class="topic-author">
                                                 <a class="fa plus-minus" href="#" ng-class="{ 'fa-plus' : !firstMessage.isTreeOpen,'fa-minus' : firstMessage.isTreeOpen}"
-                                                   ng-click="talks.toggleTree($event,firstMessage.id)"></a>
+                                                   ng-click="talks.toggleTreeFirstMessage($event,firstMessage.id)"></a>
                                             </div>
                                         </div>
                                         <div class="topic-right">
@@ -53,20 +51,21 @@
                                             <p>{{firstMessage.content}}</p>
                                             <div class="message-bottom">
                                                 <span class="topic-header-date">{{firstMessage.created|date:'short'}}</span>
-                                                <a class="answer-link" href="#" ng-click="talks.showMessageAnswerInput($event,firstMessage.id)">Ответить</a>
+                                                <a class="answer-link" href="#" ng-click="talks.showMessageAnswerInput($event,firstMessage,talk.id)">Ответить</a>
                                             </div>
                                         </div>
                                     </div>
 
                                     <div class="answer-input" ng-show="firstMessage.answerInputIsShow">
                                         <textarea ng-model="talks.answerFirstMessage"></textarea>
-                                        <a class="btn btn-sm no-border btn-primary" href="#" ng-click="talks.addSingleMessage($event,talks.fullTalkTopic.id)">Отправить</a>
+                                        <a class="btn btn-sm no-border btn-primary" href="#" ng-click="talks.addSingleMessage($event,talks.fullTalkTopic.id,firstMessage)">Отправить</a>
                                     </div>
                                 </div>
                             </div>
                             <ol class="dd-list" ng-show="firstMessage.isTreeOpen">
 
-                                <li class="dd-item dd2-item topic-item" ng-repeat="message in talks.fullTalkMessages">
+                                <li class="dd-item dd2-item topic-item" ng-repeat="message in talks.fullTalkMessages"
+                                    ng-style="{'margin-left': {{message.offset*30-30}}}" ng-show="message.isOpen && message.isParentOpen">
                                     <div class="dd2-content widget-box topic-descr">
                                         <div class="widget-body">
                                             <div class="widget-main">
@@ -75,7 +74,7 @@
                                                         <img src="i/avatars/clint.jpg" alt="картинка" /></a>
                                                     <div class="topic-author">
                                                         <a class="fa plus-minus" href="#" ng-class="{ 'fa-plus' : !message.isTreeOpen,'fa-minus' : message.isTreeOpen}"
-                                                           ng-click="talks.toggleTree($event,message.id)"></a>
+                                                           ng-click="talks.toggleTree($event,message)"></a>
                                                     </div>
                                                 </div>
                                                 <div class="topic-right">
@@ -83,14 +82,14 @@
                                                     <p>{{message.content}}</p>
                                                     <div class="message-bottom">
                                                         <span class="topic-header-date">{{message.created}}</span>
-                                                        <a class="answer-link" href="#" ng-click="talks.showMessageAnswerInput($event,firstMessage.id)">Ответить</a>
+                                                        <a class="answer-link" href="#" ng-click="talks.showMessageAnswerInput($event,message,talk.id)">Ответить</a>
                                                     </div>
                                                 </div>
                                             </div>
 
                                             <div class="answer-input" ng-show="message.answerInputIsShow">
-                                                <textarea ng-model="talks.answerMessage"></textarea>
-                                                <a class="btn btn-sm no-border btn-primary" href="#" ng-click="talks.addSingleMessage($event,talks.fullTalkTopic.id)">Отправить</a>
+                                                <textarea ng-model="message.answerMessage"></textarea>
+                                                <a class="btn btn-sm no-border btn-primary" href="#" ng-click="talks.addSingleMessage($event,talks.fullTalkTopic.id,message)">Отправить</a>
                                             </div>
                                         </div>
                                     </div>
