--- a/vonline_be/war/ajax/forum/talks-single.html
+++ b/vonline_be/war/ajax/forum/talks-single.html
@@ -43,7 +43,7 @@
                                                 <img src="i/avatars/clint.jpg" alt="картинка" /></a>
                                             <div class="topic-author">
                                                 <a class="fa plus-minus" href="#" ng-class="{ 'fa-plus' : !firstMessage.isTreeOpen,'fa-minus' : firstMessage.isTreeOpen}"
-                                                   ng-click="talks.toggleTreeFirstMessage($event,firstMessage.id)"></a>
+                                                   ng-click="talks.toggleTreeFirstMessage($event,firstMessage)"></a>
                                             </div>
                                         </div>
                                         <div class="topic-right">
