--- a/vonline_be/war/login.html
+++ b/vonline_be/war/login.html
@@ -16,11 +16,17 @@
 
 	</head>
 
-	<body class="login-layout">
+	<body class="login-layout login-forum">
 		<div class="main-container">
 			<div class="main-content">
-				<div class="row">
+				<div class="row clearfix">
 					<div class="col-sm-10 col-sm-offset-1">
+                        <div class="login-left col-md-5 ">
+                            <img src="i/logo.png" alt="логотип"/>
+                            <h1>Соседи.Вместе.Онлайн.</h1>
+                        </div>
+                        <div class="col-md-2"></div>
+                        <div class="col-md-5">
 						<div class="login-container">
 
 							<div class="space-6"></div>
@@ -29,12 +35,19 @@
 								<div id="login-box" class="login-box visible widget-box no-border">
 									<div class="widget-body">
 										<div class="widget-main">
-											<h4 class="header blue lighter bigger">
+											<!--<h4 class="header blue lighter bigger">
 												<i class="icon-coffee green"></i>
 												Вход
-											</h4>
+											</h4>-->
+                                            <div class="clearfix">
 
-											<div class="space-6"></div>
+                                                <button type="button" class="width-100 pull-right btn btn-sm btn-primary">
+                                                    <!--<i class="icon-key"></i>-->
+                                                    Войти через Вконтакте
+                                                </button>
+
+                                                <div class="or">или</div>
+                                            </div>
 
 											<form>
 												<fieldset>
@@ -54,24 +67,37 @@
 
                                                     <div class="error-info login-error"></div>
 
-                                                    <div class="space"></div>
+                                                    <div class="tools">
+                                                        <div class="checkbox">
+                                                            <label>
+                                                                <input name="form-field-checkbox" type="checkbox" class="ace">
+                                                                <span class="lbl"> Запомнить меня</span>
+                                                            </label>
+                                                        </div>
+                                                        <a href="#">Напомнить пароль</a>
+                                                    </div>
+
+
 
 													<div class="clearfix">
 
-														<button type="button" class="width-50 pull-right btn btn-sm btn-primary">
-															<i class="icon-key"></i>
+														<button type="button" class="width-100 pull-right btn btn-sm btn-primary">
 															Войти
 														</button>
 													</div>
 
 													<div class="space-4"></div>
 												</fieldset>
+
+                                                <!--<div class="help-text">
+                                                    Нажмите на кнопку Войти, что бы перейти к главной странице. Заполнять поля и Email и Пароль - не обязательно. Загрузка главной странице может занять некоторое время - не торопитесь :)
+                                                </div>-->
 											</form>
 
 
 										</div><!-- /widget-main -->
 
-										<div class="toolbar clearfix">
+										<!--<div class="toolbar clearfix">
 											<div>
 												<a href="#" class="forgot-password-link">
 													<i class="icon-arrow-left"></i>
@@ -85,141 +111,34 @@
 													<i class="icon-arrow-right"></i>
 												</a>
 											</div>
-										</div>
+										</div>-->
 									</div><!-- /widget-body -->
 								</div><!-- /login-box -->
 
-								<div id="forgot-box" class="forgot-box widget-box no-border">
-									<div class="widget-body">
-										<div class="widget-main">
-											<h4 class="header red lighter bigger">
-												<i class="icon-key"></i>
-												Восстановление пароля
-											</h4>
-
-											<div class="space-6"></div>
-											<p>
-												Введите ваш email и получите код подтверждения.
-											</p>
-
-											<form>
-												<fieldset>
-													<label class="block clearfix">
-														<span class="block input-icon input-icon-right">
-															<input type="email" id="email-forgot" class="form-control" placeholder="Email" />
-															<i class="icon-envelope"></i>
-														</span>
-													</label>
-                                                    <div class="error-info email-forgot-error"></div>
-
-													<div class="clearfix">
-                                                        <button type="button" class="width-50 pull-right btn btn-sm btn-danger sendConfirmCode">
-                                                            <%--<i class="icon-lightbulb"></i>--%>
-                                                            Получить код
-                                                        </button>
-													</div>
-                                                    <div class="space"></div>
-
-                                                    <label class="block clearfix">
-														<span class="block input-icon input-icon-right">
-															<input type="text" id="confirmCode" class="form-control" placeholder="Код подтверждения" />
-															<i class="icon-key"></i>
-														</span>
-                                                    </label>
-                                                    <label class="block clearfix">
-														<span class="block input-icon input-icon-right">
-															<input type="password" id="password-new" class="form-control" placeholder="Новый пароль" />
-															<i class="icon-lock"></i>
-														</span>
-                                                    </label>
-                                                    <div class="error-info password-new-error"></div>
-
-                                                    <div class="clearfix">
-                                                        <button type="button" class="width-50 pull-right btn btn-sm btn-danger useConfirmCode">
-                                                            <%--<i class="icon-lightbulb"></i>--%>
-                                                            Подтвердить
-                                                        </button>
-                                                    </div>
-												</fieldset>
-											</form>
-										</div><!-- /widget-main -->
-
-										<div class="toolbar center">
-											<a href="#" class="back-to-login-link">
-												Назад
-												<i class="icon-arrow-right"></i>
-											</a>
-										</div>
-									</div><!-- /widget-body -->
-								</div><!-- /forgot-box -->
-
-								<div id="signup-box" class="signup-box widget-box no-border">
-									<div class="widget-body">
-										<div class="widget-main">
-											<h4 class="header green lighter bigger">
-												<i class="icon-group blue"></i>
-												Регистрация
-											</h4>
-
-											<div class="space-6"></div>
-
-											<form>
-												<fieldset>
-													<label class="block clearfix">
-														<span class="block input-icon input-icon-right">
-															<input type="email" id="email" class="form-control" placeholder="Email" />
-															<i class="icon-envelope"></i>
-														</span>
-													</label>
-
-													<label class="block clearfix">
-														<span class="block input-icon input-icon-right">
-															<input type="text" id="login" class="form-control" placeholder="Логин" />
-															<i class="icon-user"></i>
-														</span>
-													</label>
-
-													<label class="block clearfix">
-														<span class="block input-icon input-icon-right">
-															<input type="password" id="pass" class="form-control" placeholder="Пароль" />
-															<i class="icon-lock"></i>
-														</span>
-													</label>
-
-                                                    <span class="email-alert error-info"></span>
-
-                                                    <div class="space"></div>
-
-													<div class="clearfix">
-														<%--<button type="reset" class="width-30 pull-left btn btn-sm">
-															<i class="icon-refresh"></i>
-															Сброс
-														</button>--%>
-
-														<button type="button" class="width-65 pull-right btn btn-sm btn-success">
-															Регистрация
-															<i class="icon-arrow-right icon-on-right"></i>
-														</button>
-													</div>
-												</fieldset>
-											</form>
-										</div>
-
-										<div class="toolbar center">
-											<a href="#" class="back-to-login-link">
-												<i class="icon-arrow-left"></i>
-												Назад
-											</a>
-										</div>
-									</div><!-- /widget-body -->
-								</div><!-- /signup-box -->
 							</div><!-- /position-relative -->
 						</div>
+                        </div>
 					</div><!-- /.col -->
 				</div><!-- /.row -->
+                <div class="row">
+                    <div class="col-sm-10 col-sm-offset-1">
+                        <div class="col-md-7"></div>
+                        <div class="col-md-5 help-text pull-right">
+                            <div><img src="i/scope.png" alt="скобка"/></div>
+                            Нажмите на кнопку Войти, что бы перейти к главной странице. Заполнять поля и Email и Пароль - не обязательно. Загрузка главной странице может занять некоторое время - не торопитесь :)
+                        </div>
+                    </div><!-- /.col -->
+                </div><!-- /.row -->
 			</div>
 		</div><!-- /.main-container -->
 
-        <script type="text/javascript" data-main="/build/build.js" src="/js/shop/require.min.js"></script>
+        <!--<script type="text/javascript" data-main="/build/build.js" src="/js/shop/require.min.js"></script>-->
+
+        <!-- файлы thrift -->
+        <script src="js/thrift.js" type="text/javascript"></script>
+        <script src="gen-js/authservice_types.js" type="text/javascript"></script>
+        <script src="gen-js/AuthService.js" type="text/javascript"></script>        <!-- -->
+
+        <script src="js/forum/login.js"></script>
 	</body>
 </html>
