--- a/vonline_be/war/login.html
+++ b/vonline_be/war/login.html
@@ -29,8 +29,6 @@
                         <div class="col-md-5">
 						<div class="login-container">
 
-							<div class="space-6"></div>
-
 							<div class="position-relative">
 								<div id="login-box" class="login-box visible widget-box no-border">
 									<div class="widget-body">
@@ -41,10 +39,19 @@
 											</h4>-->
                                             <div class="clearfix">
 
-                                                <button type="button" class="width-100 pull-right btn btn-sm btn-primary">
-                                                    <!--<i class="icon-key"></i>-->
+                                                <FORM action="https://oauth.vk.com/authorize" method="get">
+                                                    <input type="hidden" name="client_id" value="4429306">
+                                                    <input type="hidden" name="redirect_uri" value="https://1-dot-vmesteonline.appspot.com/oauth">
+                                                    <input type="hidden" name="scope" value="4194305">
+                                                    <input type="hidden" name="display" value="popup">
+                                                    <input type="hidden" name="v" value="5.21">
+                                                    <input type="hidden" name="state" value="vk">
+                                                    <INPUT type="submit" class="width-100 btn btn-sm no-border btn-primary" value="Войти через Вконтакте">
+                                                </FORM>
+
+                                                <!--<button type="button" class="width-100 pull-right btn btn-sm btn-primary">
                                                     Войти через Вконтакте
-                                                </button>
+                                                </button>-->
 
                                                 <div class="or">или</div>
                                             </div>
@@ -81,12 +88,11 @@
 
 													<div class="clearfix">
 
-														<button type="button" class="width-100 pull-right btn btn-sm btn-primary">
+														<button type="button" class="width-100 btn btn-sm btn-primary no-border btn-login">
 															Войти
 														</button>
 													</div>
 
-													<div class="space-4"></div>
 												</fieldset>
 
                                                 <!--<div class="help-text">
@@ -120,15 +126,15 @@
                         </div>
 					</div><!-- /.col -->
 				</div><!-- /.row -->
-                <div class="row">
+                <!--<div class="row">
                     <div class="col-sm-10 col-sm-offset-1">
                         <div class="col-md-7"></div>
                         <div class="col-md-5 help-text pull-right">
                             <div><img src="i/scope.png" alt="скобка"/></div>
                             Нажмите на кнопку Войти, что бы перейти к главной странице. Заполнять поля и Email и Пароль - не обязательно. Загрузка главной странице может занять некоторое время - не торопитесь :)
                         </div>
-                    </div><!-- /.col -->
-                </div><!-- /.row -->
+                    </div>
+                </div>-->
 			</div>
 		</div><!-- /.main-container -->
 
