--- a/vonline_be/war/register.html
+++ b/vonline_be/war/register.html
@@ -3,12 +3,13 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>Логин</title>
+		<title>Регистрация</title>
 
 		<meta name="description" content="User login page" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-        <link rel="stylesheet" href="build/style.min.css"/>
+
+        <link rel="stylesheet" href="css/style.css"/>
         <script src="./js/lib/jquery-2.1.1.min.js" type="text/javascript"></script>
         <script type="text/javascript">
             globalUserAuth = false;
@@ -19,75 +20,93 @@
 	<body class="reg-forum">
         <div class="row clearfix">
             <div class="col-sm-10 col-sm-offset-1">
-                <div class="reg-left col-md-5 ">
-                    <div class="clearfix">
+                <h2>Хорошая новость - мы нашли тебя</h2>
+                <h4>Зарегистрируйтесь, используя учетную запись</h4>
+                <div class="col-md-7">
+                    <div class="reg-left">
+                        <div class="clearfix">
 
-                        <FORM action="https://oauth.vk.com/authorize" method="get">
-                            <input type="hidden" name="client_id" value="4429306">
-                            <input type="hidden" name="redirect_uri" value="https://1-dot-vmesteonline.appspot.com/oauth">
-                            <input type="hidden" name="scope" value="4194305">
-                            <input type="hidden" name="display" value="popup">
-                            <input type="hidden" name="v" value="5.21">
-                            <input type="hidden" name="state" value="vk">
-                            <INPUT type="submit" class="width-100 btn btn-sm no-border btn-primary" value="Войти через Вконтакте">
-                        </FORM>
+                            <FORM action="https://oauth.vk.com/authorize" method="get">
+                                <input type="hidden" name="client_id" value="4429306">
+                                <input type="hidden" name="redirect_uri" value="https://1-dot-vmesteonline.appspot.com/oauth">
+                                <input type="hidden" name="scope" value="4194305">
+                                <input type="hidden" name="display" value="popup">
+                                <input type="hidden" name="v" value="5.21">
+                                <input type="hidden" name="state" value="vk">
+                                <INPUT type="submit" class="width-100 btn btn-sm no-border btn-primary" value="Вконтакте">
+                            </FORM>
 
-                        <!--<button type="button" class="width-100 pull-right btn btn-sm btn-primary">
-                            Войти через Вконтакте
-                        </button>-->
+                            <!--<button type="button" class="width-100 pull-right btn btn-sm btn-primary">
+                                Войти через Вконтакте
+                            </button>-->
 
-                        <div class="or">или</div>
-                    </div>
+                            <h4 class="align-center">или</h4>
+                        </div>
 
-                    <form>
-                        <fieldset>
-                            <label class="block clearfix">
-                                                <span class="block input-icon input-icon-right">
-                                                    <input type="text" id="uname" class="form-control" placeholder="Ваш email" />
-                                                    <i class="icon-user"></i>
-                                                </span>
-                            </label>
+                        <form>
+                            <fieldset>
+                                <label class="block clearfix">
+                                    <span class="block input-icon input-icon-right">
+                                        <input type="text" id="ufirstname" class="form-control" placeholder="Имя" />
+                                        <!--<i class="icon-user"></i>-->
+                                    </span>
+                                </label>
 
-                            <label class="block clearfix">
-                                                <span class="block input-icon input-icon-right">
-                                                    <input type="password" id="password" class="form-control" placeholder="Пароль" />
-                                                    <i class="icon-lock"></i>
-                                                </span>
-                            </label>
+                                <label class="block clearfix">
+                                    <span class="block input-icon input-icon-right">
+                                        <input type="password" id="ulastname" class="form-control" placeholder="Фамилия" />
+                                        <!--<i class="icon-lock"></i>-->
+                                    </span>
+                                </label>
 
-                            <div class="error-info login-error"></div>
+                                <label class="block clearfix align-center">
+                                    <div class="radio">
+                                        <label>
+                                            <input name="sex" type="radio" class="ace">
+                                            <span class="lbl">Мужчина</span>
+                                        </label>
+                                    </div>
+                                    <div class="radio">
+                                        <label>
+                                            <input name="sex" type="radio" class="ace">
+                                            <span class="lbl">Женщина</span>
+                                        </label>
+                                    </div>
+                                </label>
 
-                            <div class="tools">
-                                <div class="checkbox">
-                                    <label>
-                                        <input name="form-field-checkbox" type="checkbox" class="ace">
-                                        <span class="lbl"> Запомнить меня</span>
-                                    </label>
+                                <label class="block clearfix">
+                                                    <span class="block input-icon input-icon-right">
+                                                        <input type="password" id="email" class="form-control" placeholder="Email" />
+                                                        <!--<i class="icon-lock"></i>-->
+                                                    </span>
+                                </label>
+
+                                <label class="block clearfix">
+                                                    <span class="block input-icon input-icon-right">
+                                                        <input type="password" id="password" class="form-control" placeholder="Пароль" />
+                                                        <!--<i class="icon-lock"></i>-->
+                                                    </span>
+                                </label>
+
+                                <div class="error-info login-error"></div>
+
+                                <div class="clearfix">
+
+                                    <button type="button" class="width-100 btn btn-sm btn-primary no-border btn-reg">
+                                        Создать аккаунт
+                                    </button>
                                 </div>
-                                <a href="#">Напомнить пароль</a>
-                            </div>
 
+                            </fieldset>
 
-
-                            <div class="clearfix">
-
-                                <button type="button" class="width-100 btn btn-sm btn-primary no-border btn-login">
-                                    Войти
-                                </button>
-                            </div>
-
-                        </fieldset>
-
-                    </form>
+                        </form>
+                    </div>
                 </div>
-                <div class="col-md-2"></div>
                 <div class="col-md-5">
-                <div class="reg-right">
-                    <div class="position-relative">
-
-
-                    </div><!-- /position-relative -->
-                </div>
+                    <div class="reg-right">
+                        <h4>Ваш район</h4>
+                        <img src="i/map.jpg" alt="карта"/>
+                    </div>
                 </div>
             </div><!-- /.col -->
         </div>
