--- a/vonline_be/war/registration.html
+++ b/vonline_be/war/registration.html
@@ -20,6 +20,9 @@
 	<body class="reg-forum">
         <div class="row clearfix">
             <div class="col-sm-10 col-sm-offset-1">
+                <header>
+                    <img src="i/logo3.png" alt="логотип"/>
+                </header>
                 <h2>Хорошая новость - мы нашли тебя</h2>
                 <h4>Зарегистрируйтесь, используя учетную запись</h4>
                 <div class="col-md-7">
