--- a/vonline_be/war/ajax/forum/talks-single.html
+++ b/vonline_be/war/ajax/forum/talks-single.html
@@ -68,7 +68,7 @@
                                 </div>
                             </div>
                             <div class="answer-input" ng-show="talks.fullTalkTopic.answerInputIsShow">
-                                <textarea ng-model="talks.answerFirstMessage" class="no-resize"
+                                <textarea ng-model="talks.answerFirstMessage" class="no-resize" ng-keyup="base.messageChange($event,2)"
                                           onblur="if(this.value=='') this.value='Ваш ответ';"
                                           onfocus="if(this.value=='Ваш ответ') this.value='';"></textarea>
                                 <a class="btn btn-sm no-border btn-primary" href="#" ng-click="talks.addSingleFirstMessage($event,talks.fullTalkTopic.id)">Отправить</a>
@@ -100,7 +100,7 @@
                                     </div>
 
                                     <div class="answer-input" ng-show="firstMessage.answerInputIsShow">
-                                        <textarea ng-model="firstMessage.answerMessage" class="no-resize"
+                                        <textarea ng-model="firstMessage.answerMessage" class="no-resize" ng-keyup="base.messageChange($event,2)"
                                             onblur="if(this.value=='') this.value='Ваш ответ';"
                                             onfocus="if(this.value=='Ваш ответ') this.value='';"></textarea>
                                         <a class="btn btn-sm no-border btn-primary" href="#" ng-click="talks.addSingleMessage($event,talks.fullTalkTopic.id,firstMessage)">Отправить</a>
@@ -133,7 +133,7 @@
                                             </div>
 
                                             <div class="answer-input" ng-show="message.answerInputIsShow">
-                                                <textarea ng-model="message.answerMessage" class="no-resize"
+                                                <textarea ng-model="message.answerMessage" class="no-resize" ng-keyup="base.messageChange($event,2)"
                                                           onblur="if(this.value=='') this.value='Ваш ответ';"
                                                           onfocus="if(this.value=='Ваш ответ') this.value='';"></textarea>
                                                 <a class="btn btn-sm no-border btn-primary" href="#" ng-click="talks.addSingleMessage($event,talks.fullTalkTopic.id,firstMessage,message)">Отправить</a>
