--- a/vonline_be/war/ajax/ajax-orderEnd.html
+++ b/vonline_be/war/ajax/ajax-orderEnd.html
@@ -110,7 +110,7 @@
             <div class="main-content">
                 <div class="dynamic">
                     <section class="order-end">
-                        <a class="to-main-link" href="/"><< Вернуться на главную</a>
+                        <a class="to-main-link" href="/"><< Вернуться на страницу магазина</a>
 
                         <section class="order-end-in">
                             <h3>Спасибо за заказ, ждем вас снова !</h3>
@@ -154,7 +154,8 @@
 
                         </section>
 
-                        <a class="to-main-link" href="/"><< Вернуться на главную</a>
+                        <a class="to-main-link" href="/"><< Вернуться на страницу магазина</a>
+                        <br>
                         <div class="clearfix"></div>
                     </section>
                 </div>
